compiler/test_files/typing/bad/testfile-call-3.psc
i32 f(i32 x){}
i32 main() {
    f("hello");
    f((i64) 123);
}